--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.12.1
 click==8.3.1
 fastapi==0.129.0
+greenlet==3.3.1
 h11==0.16.0
 httptools==0.7.1
 idna==3.11
@@ -10,6 +11,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 PyYAML==6.0.3
+SQLAlchemy==2.0.46
 starlette==0.52.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
